@@ -15,6 +15,9 @@ MenuItem.View=View Source Browser
 MenuItem.View.Desc=Enables or disables the source browser.
 MenuItem.View.Mnemonic=V
 
+MenuItem.Configure=Configure...
+MenuItem.Configure.Mnemonic=C
+
 OptionPanel.Button.Browse=Browse...
 OptionPanel.CtagsType.Exuberant=Exuberant Ctags
 OptionPanel.CtagsType.Standard=Standard Ctags
