@@ -4,6 +4,11 @@ http://rtext.sourceforge.net
 
 1.1
 -------------------
+   - BUG: Error strip keeps Task markers even when tasks window is hidden.
+     ... should tasks be like spelling parser - dockable window is separate
+     from enabled?
+   - BUG: Opening options dialog too fast (say from unconfigured source browser)
+     will cause it to not have any options panels for plugins not yet loaded.
    - Updated translations:  Turkish (Burak), Dutch (Roel), Brazilian Portuguese
      (Marcos),
    - Added Polish translation (thanks Maciej!).
